--- a/config/InvTweaks/InvTweaks.cfg
+++ b/config/InvTweaks/InvTweaks.cfg
@@ -1,10 +1,10 @@
 #Inventory Tweaks Configuration
 #(Regarding shortcuts, all key names can be found at: http://legacy.lwjgl.org/javadoc/org/lwjgl/input/Keyboard.html)
-#Fri Jan 11 07:01:10 CST 2019
+#Mon Mar 18 01:54:09 CDT 2019
 enableMiddleClick=false
 showChestButtons=true
 enableSortingOnPickup=false
-enableAutoRefill=true
+enableAutoRefill=false
 autoRefillBeforeBreak=false
 autoRefillDamageThreshhold=5
 enableSounds=true
@@ -20,4 +20,4 @@ shortcutKeyToUpperSection=UP
 shortcutKeyToLowerSection=DOWN
 shortcutKeyDrop=LALT, RALT
 enableToolTipTreePath=false
-version=1.64+dev.145.16d98f2
+version=1.64+dev.146.2180b27
