--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -159,6 +159,9 @@ crafting {
     B:com.ancient.thaumicgadgets.blocks.BlockSarcophagus=true
     B:com.ancient.thaumicgadgets.blocks.BlockTeleportatorCore=true
     B:com.cout970.magneticraft.block.core.BlockBase=true
+    B:com.creativemd.littletiles.common.blocks.BlockLTColored=true
+    B:com.creativemd.littletiles.common.blocks.BlockStorageTile=true
+    B:com.creativemd.opf.block.BlockLittlePicFrame=true
     B:com.digitalfeonix.hydrogel.block.BlockHydroGel=true
     B:com.gildedgames.aether.common.blocks.construction.BlockRockGlass=true
     B:com.gildedgames.aether.common.blocks.construction.BlockSkyrootPlanks=true
@@ -286,6 +289,7 @@ crafting {
     B:com.zerofall.ezstorage.block.BlockUltraStorage=true
     B:de.sanandrew.mods.immersivecables.block.BlockCoil=true
     B:dmfmm.catwalks.block.StairBlock=true
+    B:exnihilocreatio.blocks.BlockBaseFalling=true
     B:ferro2000.immersivetech.common.blocks.stone.BlockStoneDecoration=true
     B:fi.dy.masa.autoverse.block.BlockSensor=true
     B:flaxbeard.immersivepetroleum.common.blocks.BlockIPBase=true
@@ -534,8 +538,21 @@ crafting {
     B:slimeknights.tconstruct.smeltery.block.BlockSeared=true
     B:slimeknights.tconstruct.world.block.BlockSlimeDirt=true
     B:slimeknights.tconstruct.world.block.BlockSlimeLeaves=true
+    B:sonar.core.common.block.BlockBase=true
+    B:sonar.core.common.block.StableStone=true
+    B:sonar.logistics.core.blocks.BlockSapphireOre=true
     B:sugiforest.block.BlockSugiLog=true
     B:sugiforest.block.BlockSugiWood=true
+    B:"team.chisel.Features$31$1"=true
+    B:"team.chisel.Features$32$1"=true
+    B:"team.chisel.Features$33$1"=true
+    B:"team.chisel.Features$37$1"=true
+    B:"team.chisel.Features$49$1"=true
+    B:"team.chisel.Features$57$1"=true
+    B:"team.chisel.Features$7$1"=true
+    B:"team.chisel.Features$73"=true
+    B:team.chisel.common.block.BlockCarvable=true
+    B:team.chisel.common.block.BlockCarvableCarpet=true
     B:techreborn.blocks.BlockFusionCoil=true
     B:techreborn.blocks.BlockMachineFrames=true
     B:techreborn.blocks.BlockOre=true
