--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -117,7 +117,15 @@ world-1793304504 {
 world-1812204326 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
-    S:filterText=@mekanism & 
+    S:filterText=boat
+    B:overlayEnabled=true
+}
+
+
+world-1860197600 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@railcr block
     B:overlayEnabled=true
 }
 
@@ -146,6 +154,30 @@ world-1915990317 {
 }
 
 
+world-1938860168 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=iron ingot
+    B:overlayEnabled=true
+}
+
+
+world-1943027030 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=flint
+    B:overlayEnabled=true
+}
+
+
+world-1960636705 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@ezs
+    B:overlayEnabled=true
+}
+
+
 world-1966076330 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -166,6 +198,22 @@ world-2007006252 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=@ways
+    B:overlayEnabled=true
+}
+
+
+world-2016544853 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=grass
+    B:overlayEnabled=true
+}
+
+
+world-2052221675 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=copper ore
     B:overlayEnabled=true
 }
 
@@ -210,10 +258,26 @@ world-21811201 {
 }
 
 
+world-289497002 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=flin
+    B:overlayEnabled=true
+}
+
+
 world-311855470 {
     B:cheatItemsEnabled=false
     B:editEnabled=false
     S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world-347702779 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@xton
     B:overlayEnabled=true
 }
 
@@ -277,7 +341,7 @@ world-612854268 {
 world-641070940 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
-    S:filterText=enginee
+    S:filterText=timer
     B:overlayEnabled=true
 }
 
@@ -354,6 +418,14 @@ world-800681489 {
 }
 
 
+world-831460279 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@magneticraft
+    B:overlayEnabled=true
+}
+
+
 world-882939239 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -364,6 +436,23 @@ world-882939239 {
 
 world-884592880 {
     B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world1026335353 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=flint
+    B:overlayEnabled=true
+}
+
+
+world1100985875 {
+    B:bookmarkOverlayEnabled=false
+    B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=
     B:overlayEnabled=true
@@ -394,6 +483,14 @@ world1146070194 {
 }
 
 
+world1162499546 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@mekanism & sola
+    B:overlayEnabled=true
+}
+
+
 world1199835611 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -406,6 +503,14 @@ world1220344452 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=hopperh
+    B:overlayEnabled=true
+}
+
+
+world1262624706 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=grave
     B:overlayEnabled=true
 }
 
@@ -442,6 +547,14 @@ world1397932926 {
 }
 
 
+world1409989879 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=anv
+    B:overlayEnabled=true
+}
+
+
 world1413777473 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -471,8 +584,40 @@ world1544803905 {
 }
 
 
+world1577017734 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=aer
+    B:overlayEnabled=true
+}
+
+
 world1582297286 {
     B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world1596008077 {
+    # Show the list of bookmarks next to open GUIs.
+    B:bookmarkOverlayEnabled=true
+
+    # Give items instead of showing the recipe.
+    B:cheatItemsEnabled=true
+
+    # Hide and unhide ingredients by clicking them in the list.
+    B:editEnabled=false
+    S:filterText=@quark
+
+    # Show the list of ingredients next to open GUIs.
+    B:overlayEnabled=true
+}
+
+
+world1624274627 {
+    B:cheatItemsEnabled=false
     B:editEnabled=false
     S:filterText=
     B:overlayEnabled=true
@@ -527,6 +672,14 @@ world1812659617 {
 }
 
 
+world1819112446 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=part b
+    B:overlayEnabled=true
+}
+
+
 world1821167760 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -535,15 +688,18 @@ world1821167760 {
 }
 
 
-world1855637915 {
-    # Give items instead of showing the recipe.
+world1841253482 {
     B:cheatItemsEnabled=true
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=quic
+    S:filterText=@mek inf
+    B:overlayEnabled=true
+}
 
-    # Show the list of ingredients next to open guis.
+
+world1855637915 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=dye
     B:overlayEnabled=true
 }
 
@@ -596,6 +752,54 @@ world280086710 {
 }
 
 
+world280086711 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world280086712 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world280086713 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world280086714 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world280086715 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world280086717 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@reliq
+    B:overlayEnabled=true
+}
+
+
 world314533133 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
@@ -616,6 +820,14 @@ world388728918 {
     B:cheatItemsEnabled=false
     B:editEnabled=false
     S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world524375327 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=sieve
     B:overlayEnabled=true
 }
 
@@ -668,6 +880,14 @@ world609009140 {
 }
 
 
+world708701480 {
+    B:cheatItemsEnabled=true
+    B:editEnabled=false
+    S:filterText=@thermalf
+    B:overlayEnabled=true
+}
+
+
 world712473666 {
     B:cheatItemsEnabled=false
     B:editEnabled=false
@@ -688,6 +908,14 @@ world822915583 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=@thermalf
+    B:overlayEnabled=true
+}
+
+
+world83573204 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=shur
     B:overlayEnabled=true
 }
 
@@ -728,6 +956,30 @@ world925886391 {
     B:cheatItemsEnabled=true
     B:editEnabled=false
     S:filterText=hop
+    B:overlayEnabled=true
+}
+
+
+world92753463 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world92753556 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
+    B:overlayEnabled=true
+}
+
+
+world92753618 {
+    B:cheatItemsEnabled=false
+    B:editEnabled=false
+    S:filterText=
     B:overlayEnabled=true
 }
 
