--- a/config/mystcraft/balance.cfg
+++ b/config/mystcraft/balance.cfg
@@ -75,6 +75,7 @@ baselining {
     I:"crossroads:blockdistilledwater_0"=0
     I:"crossroads:blockliquidfat_0"=0
     I:"crossroads:molten_copshowium_0"=0
+    I:"exnihilocreatio:witchwater_0"=0
     I:"extratrees:binnie.beer.ale_0"=0
     I:"extratrees:binnie.beer.corn_0"=0
     I:"extratrees:binnie.beer.lager_0"=0
@@ -3657,6 +3658,11 @@ fluids {
     S:fluid.wildberryjuice.instability.factor_accessibility=
     S:fluid.wildberryjuice.instability.factor_flat=
     S:fluid.wildberryjuice.seabanned=
+    S:fluid.witchwater.cardrank=
+    S:fluid.witchwater.grammar=
+    S:fluid.witchwater.instability.factor_accessibility=
+    S:fluid.witchwater.instability.factor_flat=
+    S:fluid.witchwater.seabanned=
 }
 
 
