--- a/config/mystcraft/symbols.cfg
+++ b/config/mystcraft/symbols.cfg
@@ -135,6 +135,7 @@ symbol {
         B:biome7.enabled=true
         B:biome70.enabled=true
         B:biome71.enabled=true
+        B:biome72.enabled=true
         B:biome8.enabled=true
         B:biome9.enabled=true
         B:caves.enabled=true
@@ -210,6 +211,7 @@ symbol {
         B:modmat_ice_0.enabled=true
         B:modmat_iron_ore_0.enabled=false
         B:modmat_lapis_ore_0.enabled=false
+        B:modmat_lava_0.enabled=true
         B:modmat_log2_0.enabled=true
         B:modmat_log2_1.enabled=true
         B:modmat_log_0.enabled=true
@@ -231,6 +233,7 @@ symbol {
         B:modmat_stone_4.enabled=true
         B:modmat_stone_5.enabled=true
         B:modmat_stone_6.enabled=true
+        B:modmat_water_0.enabled=true
         B:modnoon.enabled=true
         B:modnorth.enabled=true
         B:modrising.enabled=true
@@ -428,6 +431,8 @@ symbol {
     }
 
     nuclearcraft {
+        B:modmat_fluid_alugentum_0.enabled=true
+        B:modmat_fluid_alumina_0.enabled=true
         B:modmat_fluid_americium_241_0.enabled=false
         B:modmat_fluid_americium_241_fluoride_0.enabled=false
         B:modmat_fluid_americium_241_fluoride_flibe_0.enabled=false
@@ -470,6 +475,7 @@ symbol {
         B:modmat_fluid_carbon_dioxide_0.enabled=true
         B:modmat_fluid_carbon_monoxide_0.enabled=true
         B:modmat_fluid_chocolate_liquor_0.enabled=true
+        B:modmat_fluid_coal_0.enabled=true
         B:modmat_fluid_cocoa_butter_0.enabled=true
         B:modmat_fluid_condensate_water_0.enabled=true
         B:modmat_fluid_coolant_0.enabled=false
@@ -576,6 +582,7 @@ symbol {
         B:modmat_fluid_emerald_nak_hot_0.enabled=false
         B:modmat_fluid_ender_nak_0.enabled=false
         B:modmat_fluid_ender_nak_hot_0.enabled=false
+        B:modmat_fluid_ethanol_0.enabled=true
         B:modmat_fluid_ethene_0.enabled=true
         B:modmat_fluid_exhaust_steam_0.enabled=true
         B:modmat_fluid_ferroboron_0.enabled=true
@@ -688,8 +695,11 @@ symbol {
         B:modmat_fluid_magnesium_0.enabled=false
         B:modmat_fluid_magnesium_nak_0.enabled=false
         B:modmat_fluid_magnesium_nak_hot_0.enabled=false
+        B:modmat_fluid_manganese_0.enabled=true
+        B:modmat_fluid_manganese_dioxide_0.enabled=true
         B:modmat_fluid_marshmallow_0.enabled=true
         B:modmat_fluid_methanol_0.enabled=true
+        B:modmat_fluid_milk_0.enabled=true
         B:modmat_fluid_milk_chocolate_0.enabled=true
         B:modmat_fluid_nak_0.enabled=false
         B:modmat_fluid_nak_hot_0.enabled=false
@@ -730,9 +740,11 @@ symbol {
         B:modmat_fluid_radaway_0.enabled=false
         B:modmat_fluid_redstone_nak_0.enabled=false
         B:modmat_fluid_redstone_nak_hot_0.enabled=false
+        B:modmat_fluid_sic_vapor_0.enabled=true
         B:modmat_fluid_sodium_0.enabled=false
         B:modmat_fluid_sodium_fluoride_solution_0.enabled=false
         B:modmat_fluid_sodium_hydroxide_solution_0.enabled=false
+        B:modmat_fluid_steam_0.enabled=true
         B:modmat_fluid_sugar_0.enabled=true
         B:modmat_fluid_sulfur_0.enabled=false
         B:modmat_fluid_sulfur_dioxide_0.enabled=false
@@ -752,6 +764,7 @@ symbol {
         B:modmat_fluid_tough_0.enabled=true
         B:modmat_fluid_tritium_0.enabled=false
         B:modmat_fluid_unsweetened_chocolate_0.enabled=true
+        B:modmat_fluid_uranium_0.enabled=true
         B:modmat_fluid_uranium_233_0.enabled=false
         B:modmat_fluid_uranium_233_fluoride_0.enabled=false
         B:modmat_fluid_uranium_233_fluoride_flibe_0.enabled=false
@@ -768,6 +781,8 @@ symbol {
     plustic {
         B:modmat_plustic.molten_alumite_0.enabled=false
         B:modmat_plustic.molten_elementium_0.enabled=false
+        B:modmat_plustic.molten_invar_0.enabled=true
+        B:modmat_plustic.molten_iridium_0.enabled=true
         B:modmat_plustic.molten_manasteel_0.enabled=false
         B:modmat_plustic.molten_mirion_0.enabled=false
         B:modmat_plustic.molten_osgloglas_0.enabled=false
@@ -777,13 +792,17 @@ symbol {
         B:modmat_plustic.molten_refinedglowstone_0.enabled=false
         B:modmat_plustic.molten_refinedobsidian_0.enabled=false
         B:modmat_plustic.molten_terrasteel_0.enabled=false
+        B:modmat_plustic.molten_thaumium_0.enabled=true
     }
 
     pneumaticcraft {
+        B:modmat_fluid.diesel_0.enabled=true
         B:modmat_fluid.etchacid_0.enabled=false
         B:modmat_fluid.fuel_0.enabled=false
         B:modmat_fluid.kerosene_0.enabled=false
         B:modmat_fluid.lpg_0.enabled=false
+        B:modmat_fluid.lubricant_0.enabled=true
+        B:modmat_fluid.oil_0.enabled=true
         B:modmat_fluid.plastic_0.enabled=false
     }
 
@@ -816,7 +835,9 @@ symbol {
         B:modmat_molten_copper_0.enabled=false
         B:modmat_molten_dirt_0.enabled=false
         B:modmat_molten_electrum_0.enabled=false
+        B:modmat_molten_emerald_0.enabled=true
         B:modmat_molten_enderium_0.enabled=false
+        B:modmat_molten_glass_0.enabled=true
         B:modmat_molten_gold_0.enabled=false
         B:modmat_molten_invar_0.enabled=false
         B:modmat_molten_iridium_0.enabled=false
@@ -925,6 +946,7 @@ symbol {
     }
 
     immersivepetroleum {
+        B:modmat_fluid_crude_oil_0.enabled=true
         B:modmat_fluid_diesel_0.enabled=false
         B:modmat_fluid_gasoline_0.enabled=false
         B:modmat_fluid_lubricant_0.enabled=false
@@ -936,6 +958,39 @@ symbol {
         B:modmat_molten_valkyrie_0.enabled=true
         B:modmat_tinkersaether.molten_gravitite_0.enabled=false
         B:modmat_tinkersaether.molten_valkyrie_0.enabled=false
+    }
+
+    railcraft {
+        B:modmat_creosote_0.enabled=true
+        B:modmat_steam_7.enabled=true
+    }
+
+    thaumcraft {
+        B:modmat_flux_goo_7.enabled=true
+        B:modmat_liquid_death_0.enabled=true
+        B:modmat_purifying_fluid_0.enabled=true
+    }
+
+    powersuits {
+        B:modmat_liquid_nitrogen_7.enabled=true
+    }
+
+    thaumadditions {
+        B:modmat_crystal_water_0.enabled=true
+    }
+
+    crossroads {
+        B:modmat_blockdistilledwater_0.enabled=true
+        B:modmat_blockliquidfat_0.enabled=true
+        B:modmat_molten_copshowium_0.enabled=true
+    }
+
+    aim {
+        B:modmat_fluid_moltenxp_0.enabled=true
+    }
+
+    exnihilocreatio {
+        B:modmat_witchwater_0.enabled=true
     }
 
 }
