--- a/config/oreveins.cfg
+++ b/config/oreveins.cfg
@@ -1,6 +1,9 @@
 # Configuration file
 
 general {
+    # Always create default ore_veins.json file if none if found.
+    B:ALWAYS_CREATE_DEFAULT_CONFIG=true
+
     # Enables debug commands /clearworld, /veininfo, /reloadveins and /findveins
     B:DEBUG_COMMANDS=true
 
