--- a/config/pneumaticcraft/thirdparty.cfg
+++ b/config/pneumaticcraft/thirdparty.cfg
@@ -16,6 +16,7 @@
     "igwmod": true,
     "ic2": true,
     "opencomputers": true,
+    "patchouli": true,
     "buildcraftcore": true,
     "forestry": true,
     "appliedenergistics2": true
