Added sieving recipes for pebbles

--- a/config/jei/worldSettings.cfg
+++ b/config/jei/worldSettings.cfg
@@ -609,7 +609,7 @@ world1596008077 {
 
     # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=leav
+    S:filterText=pebble
 
     # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
