Disabled several Ex Nihilo Creatio items

--- a/config/stevescarts.cfg
+++ b/config/stevescarts.cfg
@@ -31,6 +31,7 @@ enabledmodules {
     B:DivineShield=true
     B:DrillIntelligence=true
     B:DynamiteCarrier=true
+    B:EggBasket=true
     B:Enchanter=true
     B:EntityDetector_Animal=true
     B:EntityDetector_Monster=true
@@ -114,7 +115,7 @@ repair {
     # Set name of what is needed to repair diamond tier tool, blank uses default text [default: ]
     S:"Diamond Tier Name"=
 
-    # A list of items that can repair an diamond tier tool [default: [Ljava.lang.String;@8323c41]
+    # A list of items that can repair an diamond tier tool [default: [ore:gemDiamond]]
     S:"Diamond Tier Repair Items" <
         ore:gemDiamond
      >
@@ -122,7 +123,7 @@ repair {
     # Set name of what is needed to repair hardened tier tool, blank uses default text [default: ]
     S:"Hardened Tier Name"=
 
-    # A list of items that can repair an hardened tier tool [default: [Ljava.lang.String;@b7dcb98]
+    # A list of items that can repair an hardened tier tool [default: [stevescarts:modulecomponents:22]]
     S:"Hardened Tier Repair Items" <
         stevescarts:modulecomponents:22
      >
@@ -130,7 +131,7 @@ repair {
     # Set name of what is needed to repair iron tier tool, blank uses default text [default: ]
     S:"Iron Tier Name"=
 
-    # A list of items that can repair an iron tier tool [default: [Ljava.lang.String;@60675b25]
+    # A list of items that can repair an iron tier tool [default: [minecraft:iron_ingot]]
     S:"Iron Tier Repair Items" <
         minecraft:iron_ingot
      >
