Added alternate conveyor belt recipe that uses paper

--- a/config/apatheticmobs.cfg
+++ b/config/apatheticmobs.cfg
@@ -1,10 +1,25 @@
 # Configuration file
 
+compatibility {
+    # if true, Gaia Guardian will shoot its attacks at you; if false, you'll only get the magic floor and the mobs, which will ignore you [default: false]
+    B:gaiaGuardian=false
+}
+
+
+ender_dragon {
+    # if true, ender dragon will attack the player when flying [default: false]
+    B:dragonfly=false
+
+    # if true, ender dragon will attack the player when sittingâ€”you should set this to true so you can get dragon's breath! [default: false]
+    B:dragonsit=false
+}
+
+
 rules {
     # if true, mod will ignore excluded mobs; if false, mod will only adjust included mobs [default: true]
     B:blacklist=true
 
-    # list of difficulties in which the mod will work if difficultyLock is set to true [default: [Ljava.lang.String;@6aeb877f]
+    # list of difficulties in which the mod will work if difficultyLock is set to true [default: [easy]]
     S:difficulties <
         easy
      >
@@ -12,18 +27,27 @@ rules {
     # if true, mod will only work on listed difficulties; if false, it will always work [default: false]
     B:difficultyLock=true
 
-    # list of entities that will still attack the player [default: [Ljava.lang.String;@308aad02]
+    # list of entities that will still attack the player [default: [minecraft:cow]]
     S:exclusions <
         minecraft:cow
      >
 
-    # list of entities that will not attack the player [default: [Ljava.lang.String;@5fc77d07]
+    # list of entities that will not attack the player [default: [minecraft:zombie]]
     S:inclusions <
         minecraft:zombie
      >
 
     # if true, mobs will attack you back; if false, they will never attack you back [default: false]
     B:revenge=true
+}
+
+
+wither {
+    # if true, wither will attack you; if false, wither will neither attack you nor, well, anything [default: false]
+    B:witherAttacks=false
+
+    # if true, wither will take revenge [default: false]
+    B:witherRevenge=false
 }
 
 
