--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -163,6 +163,7 @@ crafting {
     B:com.creativemd.littletiles.common.blocks.BlockStorageTile=true
     B:com.creativemd.opf.block.BlockLittlePicFrame=true
     B:com.digitalfeonix.hydrogel.block.BlockHydroGel=true
+    B:com.direwolf20.buildinggadgets.common.blocks.ConstructionBlockDense=true
     B:com.gildedgames.aether.common.blocks.construction.BlockRockGlass=true
     B:com.gildedgames.aether.common.blocks.construction.BlockSkyrootPlanks=true
     B:com.gildedgames.aether.common.blocks.construction.BlockTherawoodPlanks=true
