--- a/config/commoncapabilities.cfg
+++ b/config/commoncapabilities.cfg
@@ -46,6 +46,12 @@ core {
 "mod compat" {
     # Furnace and Brewing stand capabilities.
     B:Minecraft=true
+
+    # Worker, Wrench and Temperature capabilities for Forestry machines.
+    B:forestry=true
+
+    # Worker capabilities for TCon machines.
+    B:tconstruct=true
 }
 
 
