--- a/config/tconstruct.cfg
+++ b/config/tconstruct.cfg
@@ -18,6 +18,9 @@ clientside {
     # If true all material variants of the different parts, tools,... will be listed in creative. Set to false to only have the first found material for all items (usually wood).
     B:listAllMaterials=true
 
+    # If true, temperatures in the smeltery and in JEI will display in celsius. If false they will use the internal units of Kelvin, which may be better for devs
+    B:temperatureCelsius=true
+
     # If true tools will enable the forge bucket model on startup and then turn itself off. This is only there so that a fresh install gets the buckets turned on by default.
     B:enableForgeBucketModel=false
 
@@ -45,7 +48,7 @@ gameplay {
     # Allows to craft all tool parts of all materials in the part builder, including materials that normally have to be cast with a smeltery.
     B:craftCastableMaterials=false
 
-    # Blacklist of TE classnames for the crafting station to connect to. Mainly for compatibility.
+    # Blacklist of registry names or TE classnames for the crafting station to connect to. Mainly for compatibility.
     S:craftingStationBlacklist <
         de.ellpeck.actuallyadditions.mod.tile.TileEntityItemViewer
      >
@@ -98,8 +101,8 @@ worldgen {
     I:slimeIslandBlacklist <
         -1
         1
-	43
-	4
+        43
+        4
      >
 
     # If true, slime islands wont generate in dimensions which aren't of type surface. This means they wont generate in modded cave dimensions like the deep dark.
