Disabled several unbalanced Thaumcraft liquid pages

--- a/config/mystcraft/symbols.cfg
+++ b/config/mystcraft/symbols.cfg
@@ -431,8 +431,8 @@ symbol {
     }
 
     nuclearcraft {
-        B:modmat_fluid_alugentum_0.enabled=true
-        B:modmat_fluid_alumina_0.enabled=true
+        B:modmat_fluid_alugentum_0.enabled=false
+        B:modmat_fluid_alumina_0.enabled=false
         B:modmat_fluid_americium_241_0.enabled=false
         B:modmat_fluid_americium_241_fluoride_0.enabled=false
         B:modmat_fluid_americium_241_fluoride_flibe_0.enabled=false
@@ -443,8 +443,8 @@ symbol {
         B:modmat_fluid_americium_243_fluoride_0.enabled=false
         B:modmat_fluid_americium_243_fluoride_flibe_0.enabled=false
         B:modmat_fluid_ammonia_0.enabled=false
-        B:modmat_fluid_arsenic_0.enabled=true
-        B:modmat_fluid_bas_0.enabled=true
+        B:modmat_fluid_arsenic_0.enabled=false
+        B:modmat_fluid_bas_0.enabled=false
         B:modmat_fluid_bef2_0.enabled=false
         B:modmat_fluid_berkelium_247_0.enabled=false
         B:modmat_fluid_berkelium_247_fluoride_0.enabled=false
@@ -453,7 +453,7 @@ symbol {
         B:modmat_fluid_berkelium_248_fluoride_0.enabled=false
         B:modmat_fluid_berkelium_248_fluoride_flibe_0.enabled=false
         B:modmat_fluid_beryllium_0.enabled=false
-        B:modmat_fluid_borax_solution_0.enabled=true
+        B:modmat_fluid_borax_solution_0.enabled=false
         B:modmat_fluid_boric_acid_0.enabled=false
         B:modmat_fluid_boron10_0.enabled=false
         B:modmat_fluid_boron11_0.enabled=false
@@ -472,12 +472,12 @@ symbol {
         B:modmat_fluid_californium_252_0.enabled=false
         B:modmat_fluid_californium_252_fluoride_0.enabled=false
         B:modmat_fluid_californium_252_fluoride_flibe_0.enabled=false
-        B:modmat_fluid_carbon_dioxide_0.enabled=true
-        B:modmat_fluid_carbon_monoxide_0.enabled=true
-        B:modmat_fluid_chocolate_liquor_0.enabled=true
-        B:modmat_fluid_coal_0.enabled=true
-        B:modmat_fluid_cocoa_butter_0.enabled=true
-        B:modmat_fluid_condensate_water_0.enabled=true
+        B:modmat_fluid_carbon_dioxide_0.enabled=false
+        B:modmat_fluid_carbon_monoxide_0.enabled=false
+        B:modmat_fluid_chocolate_liquor_0.enabled=false
+        B:modmat_fluid_coal_0.enabled=false
+        B:modmat_fluid_cocoa_butter_0.enabled=false
+        B:modmat_fluid_condensate_water_0.enabled=false
         B:modmat_fluid_coolant_0.enabled=false
         B:modmat_fluid_copper_nak_0.enabled=false
         B:modmat_fluid_copper_nak_hot_0.enabled=false
@@ -496,7 +496,7 @@ symbol {
         B:modmat_fluid_curium_247_0.enabled=false
         B:modmat_fluid_curium_247_fluoride_0.enabled=false
         B:modmat_fluid_curium_247_fluoride_flibe_0.enabled=false
-        B:modmat_fluid_dark_chocolate_0.enabled=true
+        B:modmat_fluid_dark_chocolate_0.enabled=false
         B:modmat_fluid_depleted_fuel_hea_242_0.enabled=false
         B:modmat_fluid_depleted_fuel_hea_242_fluoride_0.enabled=false
         B:modmat_fluid_depleted_fuel_hea_242_fluoride_flibe_0.enabled=false
@@ -582,14 +582,14 @@ symbol {
         B:modmat_fluid_emerald_nak_hot_0.enabled=false
         B:modmat_fluid_ender_nak_0.enabled=false
         B:modmat_fluid_ender_nak_hot_0.enabled=false
-        B:modmat_fluid_ethanol_0.enabled=true
-        B:modmat_fluid_ethene_0.enabled=true
-        B:modmat_fluid_exhaust_steam_0.enabled=true
-        B:modmat_fluid_ferroboron_0.enabled=true
+        B:modmat_fluid_ethanol_0.enabled=false
+        B:modmat_fluid_ethene_0.enabled=false
+        B:modmat_fluid_exhaust_steam_0.enabled=false
+        B:modmat_fluid_ferroboron_0.enabled=false
         B:modmat_fluid_flibe_0.enabled=false
         B:modmat_fluid_fluorine_0.enabled=false
         B:modmat_fluid_fluorite_water_0.enabled=false
-        B:modmat_fluid_fluoromethane_0.enabled=true
+        B:modmat_fluid_fluoromethane_0.enabled=false
         B:modmat_fluid_fuel_hea_242_0.enabled=false
         B:modmat_fluid_fuel_hea_242_fluoride_0.enabled=false
         B:modmat_fluid_fuel_hea_242_fluoride_flibe_0.enabled=false
@@ -665,16 +665,16 @@ symbol {
         B:modmat_fluid_fuel_tbu_0.enabled=false
         B:modmat_fluid_fuel_tbu_fluoride_0.enabled=false
         B:modmat_fluid_fuel_tbu_fluoride_flibe_0.enabled=false
-        B:modmat_fluid_gelatin_0.enabled=true
+        B:modmat_fluid_gelatin_0.enabled=false
         B:modmat_fluid_glowstone_nak_0.enabled=false
         B:modmat_fluid_glowstone_nak_hot_0.enabled=false
         B:modmat_fluid_gold_nak_0.enabled=false
         B:modmat_fluid_gold_nak_hot_0.enabled=false
-        B:modmat_fluid_hard_carbon_0.enabled=true
+        B:modmat_fluid_hard_carbon_0.enabled=false
         B:modmat_fluid_helium3_0.enabled=false
         B:modmat_fluid_helium_0.enabled=false
-        B:modmat_fluid_high_pressure_steam_0.enabled=true
-        B:modmat_fluid_hydrated_gelatin_0.enabled=true
+        B:modmat_fluid_high_pressure_steam_0.enabled=false
+        B:modmat_fluid_hydrated_gelatin_0.enabled=false
         B:modmat_fluid_hydrofluoric_acid_0.enabled=false
         B:modmat_fluid_hydrogen_0.enabled=false
         B:modmat_fluid_iron_nak_0.enabled=false
@@ -690,17 +690,17 @@ symbol {
         B:modmat_fluid_lithium6_0.enabled=false
         B:modmat_fluid_lithium7_0.enabled=false
         B:modmat_fluid_lithium_0.enabled=false
-        B:modmat_fluid_low_pressure_steam_0.enabled=true
-        B:modmat_fluid_low_quality_steam_0.enabled=true
+        B:modmat_fluid_low_pressure_steam_0.enabled=false
+        B:modmat_fluid_low_quality_steam_0.enabled=false
         B:modmat_fluid_magnesium_0.enabled=false
         B:modmat_fluid_magnesium_nak_0.enabled=false
         B:modmat_fluid_magnesium_nak_hot_0.enabled=false
-        B:modmat_fluid_manganese_0.enabled=true
-        B:modmat_fluid_manganese_dioxide_0.enabled=true
-        B:modmat_fluid_marshmallow_0.enabled=true
-        B:modmat_fluid_methanol_0.enabled=true
-        B:modmat_fluid_milk_0.enabled=true
-        B:modmat_fluid_milk_chocolate_0.enabled=true
+        B:modmat_fluid_manganese_0.enabled=false
+        B:modmat_fluid_manganese_dioxide_0.enabled=false
+        B:modmat_fluid_marshmallow_0.enabled=false
+        B:modmat_fluid_methanol_0.enabled=false
+        B:modmat_fluid_milk_0.enabled=false
+        B:modmat_fluid_milk_chocolate_0.enabled=false
         B:modmat_fluid_nak_0.enabled=false
         B:modmat_fluid_nak_hot_0.enabled=false
         B:modmat_fluid_naoh_0.enabled=false
@@ -733,19 +733,19 @@ symbol {
         B:modmat_fluid_potassium_0.enabled=false
         B:modmat_fluid_potassium_fluoride_solution_0.enabled=false
         B:modmat_fluid_potassium_hydroxide_solution_0.enabled=false
-        B:modmat_fluid_preheated_water_0.enabled=true
+        B:modmat_fluid_preheated_water_0.enabled=false
         B:modmat_fluid_quartz_0.enabled=false
         B:modmat_fluid_quartz_nak_0.enabled=false
         B:modmat_fluid_quartz_nak_hot_0.enabled=false
         B:modmat_fluid_radaway_0.enabled=false
         B:modmat_fluid_redstone_nak_0.enabled=false
         B:modmat_fluid_redstone_nak_hot_0.enabled=false
-        B:modmat_fluid_sic_vapor_0.enabled=true
+        B:modmat_fluid_sic_vapor_0.enabled=false
         B:modmat_fluid_sodium_0.enabled=false
         B:modmat_fluid_sodium_fluoride_solution_0.enabled=false
         B:modmat_fluid_sodium_hydroxide_solution_0.enabled=false
-        B:modmat_fluid_steam_0.enabled=true
-        B:modmat_fluid_sugar_0.enabled=true
+        B:modmat_fluid_steam_0.enabled=false
+        B:modmat_fluid_sugar_0.enabled=false
         B:modmat_fluid_sulfur_0.enabled=false
         B:modmat_fluid_sulfur_dioxide_0.enabled=false
         B:modmat_fluid_sulfur_trioxide_0.enabled=false
@@ -761,10 +761,10 @@ symbol {
         B:modmat_fluid_thorium_fluoride_flibe_0.enabled=false
         B:modmat_fluid_tin_nak_0.enabled=false
         B:modmat_fluid_tin_nak_hot_0.enabled=false
-        B:modmat_fluid_tough_0.enabled=true
+        B:modmat_fluid_tough_0.enabled=false
         B:modmat_fluid_tritium_0.enabled=false
-        B:modmat_fluid_unsweetened_chocolate_0.enabled=true
-        B:modmat_fluid_uranium_0.enabled=true
+        B:modmat_fluid_unsweetened_chocolate_0.enabled=false
+        B:modmat_fluid_uranium_0.enabled=false
         B:modmat_fluid_uranium_233_0.enabled=false
         B:modmat_fluid_uranium_233_fluoride_0.enabled=false
         B:modmat_fluid_uranium_233_fluoride_flibe_0.enabled=false
@@ -781,8 +781,8 @@ symbol {
     plustic {
         B:modmat_plustic.molten_alumite_0.enabled=false
         B:modmat_plustic.molten_elementium_0.enabled=false
-        B:modmat_plustic.molten_invar_0.enabled=true
-        B:modmat_plustic.molten_iridium_0.enabled=true
+        B:modmat_plustic.molten_invar_0.enabled=false
+        B:modmat_plustic.molten_iridium_0.enabled=false
         B:modmat_plustic.molten_manasteel_0.enabled=false
         B:modmat_plustic.molten_mirion_0.enabled=false
         B:modmat_plustic.molten_osgloglas_0.enabled=false
@@ -792,17 +792,17 @@ symbol {
         B:modmat_plustic.molten_refinedglowstone_0.enabled=false
         B:modmat_plustic.molten_refinedobsidian_0.enabled=false
         B:modmat_plustic.molten_terrasteel_0.enabled=false
-        B:modmat_plustic.molten_thaumium_0.enabled=true
+        B:modmat_plustic.molten_thaumium_0.enabled=false
     }
 
     pneumaticcraft {
-        B:modmat_fluid.diesel_0.enabled=true
+        B:modmat_fluid.diesel_0.enabled=false
         B:modmat_fluid.etchacid_0.enabled=false
         B:modmat_fluid.fuel_0.enabled=false
         B:modmat_fluid.kerosene_0.enabled=false
         B:modmat_fluid.lpg_0.enabled=false
-        B:modmat_fluid.lubricant_0.enabled=true
-        B:modmat_fluid.oil_0.enabled=true
+        B:modmat_fluid.lubricant_0.enabled=false
+        B:modmat_fluid.oil_0.enabled=false
         B:modmat_fluid.plastic_0.enabled=false
     }
 
@@ -830,12 +830,12 @@ symbol {
         B:modmat_molten_ardite_0.enabled=false
         B:modmat_molten_brass_0.enabled=false
         B:modmat_molten_bronze_0.enabled=false
-        B:modmat_molten_clay_0.enabled=true
+        B:modmat_molten_clay_0.enabled=false
         B:modmat_molten_cobalt_0.enabled=false
         B:modmat_molten_copper_0.enabled=false
-        B:modmat_molten_dirt_0.enabled=false
+        B:modmat_molten_dirt_0.enabled=true
         B:modmat_molten_electrum_0.enabled=false
-        B:modmat_molten_emerald_0.enabled=true
+        B:modmat_molten_emerald_0.enabled=false
         B:modmat_molten_enderium_0.enabled=false
         B:modmat_molten_glass_0.enabled=true
         B:modmat_molten_gold_0.enabled=false
@@ -853,7 +853,7 @@ symbol {
         B:modmat_molten_signalum_0.enabled=false
         B:modmat_molten_silver_0.enabled=false
         B:modmat_molten_steel_0.enabled=false
-        B:modmat_molten_stone_0.enabled=false
+        B:modmat_molten_stone_0.enabled=true
         B:modmat_molten_tin_0.enabled=false
         B:modmat_molten_zinc_0.enabled=false
         B:modmat_purpleslime_0.enabled=false
@@ -946,23 +946,16 @@ symbol {
     }
 
     immersivepetroleum {
-        B:modmat_fluid_crude_oil_0.enabled=true
+        B:modmat_fluid_crude_oil_0.enabled=false
         B:modmat_fluid_diesel_0.enabled=false
         B:modmat_fluid_gasoline_0.enabled=false
         B:modmat_fluid_lubricant_0.enabled=false
         B:modmat_fluid_napalm_0.enabled=false
     }
 
-    tinkersaether {
-        B:modmat_molten_gravitite_0.enabled=true
-        B:modmat_molten_valkyrie_0.enabled=true
-        B:modmat_tinkersaether.molten_gravitite_0.enabled=false
-        B:modmat_tinkersaether.molten_valkyrie_0.enabled=false
-    }
-
     railcraft {
-        B:modmat_creosote_0.enabled=true
-        B:modmat_steam_7.enabled=true
+        B:modmat_creosote_0.enabled=false
+        B:modmat_steam_7.enabled=false
     }
 
     thaumcraft {
@@ -972,7 +965,7 @@ symbol {
     }
 
     powersuits {
-        B:modmat_liquid_nitrogen_7.enabled=true
+        B:modmat_liquid_nitrogen_7.enabled=false
     }
 
     thaumadditions {
@@ -980,17 +973,17 @@ symbol {
     }
 
     crossroads {
-        B:modmat_blockdistilledwater_0.enabled=true
-        B:modmat_blockliquidfat_0.enabled=true
-        B:modmat_molten_copshowium_0.enabled=true
+        B:modmat_blockdistilledwater_0.enabled=false
+        B:modmat_blockliquidfat_0.enabled=false
+        B:modmat_molten_copshowium_0.enabled=false
     }
 
     aim {
-        B:modmat_fluid_moltenxp_0.enabled=true
+        B:modmat_fluid_moltenxp_0.enabled=false
     }
 
     exnihilocreatio {
-        B:modmat_witchwater_0.enabled=true
+        B:modmat_witchwater_0.enabled=false
     }
 
 }
