Disabled liquid death Mystcraft page

--- a/config/mystcraft/symbols.cfg
+++ b/config/mystcraft/symbols.cfg
@@ -959,9 +959,9 @@ symbol {
     }
 
     thaumcraft {
-        B:modmat_flux_goo_7.enabled=true
-        B:modmat_liquid_death_0.enabled=true
-        B:modmat_purifying_fluid_0.enabled=true
+        B:modmat_flux_goo_7.enabled=false
+        B:modmat_liquid_death_0.enabled=false
+        B:modmat_purifying_fluid_0.enabled=false
     }
 
     powersuits {
@@ -969,7 +969,7 @@ symbol {
     }
 
     thaumadditions {
-        B:modmat_crystal_water_0.enabled=true
+        B:modmat_crystal_water_0.enabled=false
     }
 
     crossroads {
