Disabled Quark stone spawning

--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -1424,7 +1424,7 @@ world {
             I:"Cluster Rarity"=15
 
             #  [default: true]
-            B:Enabled=true
+            B:Enabled=false
 
             # Setting this to true will make the 'Cluster Rarity' feature be X per chunk rather than 1 per X chunks [default: false]
             B:"Invert Cluster Rarity"=false
@@ -1465,7 +1465,7 @@ world {
             I:"Cluster Rarity"=15
 
             #  [default: true]
-            B:Enabled=true
+            B:Enabled=false
 
             # Setting this to true will make the 'Cluster Rarity' feature be X per chunk rather than 1 per X chunks [default: false]
             B:"Invert Cluster Rarity"=false
@@ -1502,7 +1502,7 @@ world {
             I:"Cluster Rarity"=15
 
             #  [default: true]
-            B:Enabled=true
+            B:Enabled=false
 
             # Setting this to true will make the 'Cluster Rarity' feature be X per chunk rather than 1 per X chunks [default: false]
             B:"Invert Cluster Rarity"=false
@@ -1540,8 +1540,7 @@ world {
             I:"Cluster Rarity"=15
 
             #  [default: true]
-            B:Enabled=true
-
+            B:Enabled=false
             # Setting this to true will make the 'Cluster Rarity' feature be X per chunk rather than 1 per X chunks [default: false]
             B:"Invert Cluster Rarity"=false
 
@@ -1581,7 +1580,7 @@ world {
             I:"Cluster Rarity"=15
 
             #  [default: true]
-            B:Enabled=true
+            B:Enabled=false
 
             # Setting this to true will make the 'Cluster Rarity' feature be X per chunk rather than 1 per X chunks [default: false]
             B:"Invert Cluster Rarity"=false
@@ -2516,7 +2515,7 @@ world {
             I:"Cluster Rarity"=20
 
             #  [default: true]
-            B:Enabled=true
+            B:Enabled=false
 
             # Setting this to true will make the 'Cluster Rarity' feature be X per chunk rather than 1 per X chunks [default: false]
             B:"Invert Cluster Rarity"=false
@@ -2597,5 +2596,3 @@ world {
     }
 
 }
-
-
